# Game

./: CMakeLists.txt  README.md
assets/: sampleScene.json
gameProject/: VertexShader.hlsl  gameProject.sln  gameProject.vcxproj  gameProject.vcxproj.filters  vertexShader.vs
gameProject/include/glad/: glad.h
gameProject/libs/: glfw3.lib
gameProject/src/: glad.c  main.cpp
lib/Engine/: CMakeLists.txt  Camera.h  Object.cpp  Object.h  RTScene.cpp  RTScene.h  Ray.h  Shape.cpp  Shape.h
lib/Engine/include/json/docs/mkdocs/: requirements.txt
lib/Engine/src/: Base.h  DebugFunction.h  EngineDebugFunction.cpp  EngineDebugFunction.h  Light.cpp  Light.h  Material.h  Object.cpp  Object.h  RTScene.cpp  RTScene.h  Ray.h  SceneBuilder.cpp  SceneBuilder.h  Shape.cpp
lib/Engine/srcDbg/: DebugFlags.h
lib/PAM/: CmakeLists.txt  PAM.cpp  PAM.h
lib/PAM/cmake/: FindEigen3.cmake
lib/PAM/src/: PAM.cpp  PAM.h
old/gameProject/src/: main.cpp
src/: default.cpp  default.h  game.cpp  game.h  main.cpp  main.cpp-1
